force-app/main/default/objects/Sample__c/Sample__c.object-meta.xml
<CustomObject>
    <label>Sample</label>
    <nameField>
        <displayFormat>Sample-{0000}</displayFormat>
        <label>Sample  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Samples</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>