force-app/main/default/objects/Sample__c/fields/Pharma_product__c.field-meta.xml
<CustomField>
    <fullName>Pharma_product__c</fullName>
    <label>Pharma product</label>
    <referenceTo>Pharma_product__c</referenceTo>
    <relationshipLabel>Samples</relationshipLabel>
    <relationshipName>Samples</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>