force-app/main/default/objects/Sample__c/validationRules/Quantity_cannot_be_negetive.validationRule-meta.xml
<ValidationRule>
    <fullName>Quantity_cannot_be_negetive</fullName>
    <active>true</active>
    <errorConditionFormula>Quantity__c &lt;=0</errorConditionFormula>
    <errorMessage>Enter a valid quantity</errorMessage>
</ValidationRule>